--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,9 @@
-nlpcloud.api-key=${NLPCLOUD_API_KEY}
-nlpcloud.base-url=${NLP_CLOUD_BASE_URL:https://api.nlpcloud.io}
+nlpcloud.api-key=126126bb9a64fce7bd6f781e443491b31cbba29a
+nlpcloud.base-url=${NLP_CLOUD_BASE_URL:https://api.nlpcloud.io/v1}
 nlpcloud.summarization-model=${NLP_CLOUD_SUMMARIZATION_MODEL:bart-large-cnn}
 nlpcloud.summarization-endpoint=/summarization
 nlpcloud.timeout=${NLP_CLOUD_TIMEOUT:5s}
 nlpcloud.max-retries=${NLP_CLOUD_MAX_RETRIES:3}
+server.port=8085
+nlpcloud.entity-model=en_core_web_lg
+nlpcloud.entity-endpoint=/entities
