--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 nlpcloud.api-key=126126bb9a64fce7bd6f781e443491b31cbba29a
-nlpcloud.base-url=${NLP_CLOUD_BASE_URL:https://api.nlpcloud.io/v1}
+nlpcloud.base-url=${NLP_CLOUD_BASE_URL:https://api.nlpcloud.io/}
 
 nlpcloud.timeout=${NLP_CLOUD_TIMEOUT:5s}
 nlpcloud.max-retries=${NLP_CLOUD_MAX_RETRIES:3}
@@ -11,12 +11,16 @@ nlpcloud.summarization-endpoint=/summarization
 
 # ===== Grammar correction =====
 nlpcloud.grammar-model=chatdolphin
-nlpcloud.grammar-endpoint=/gs_correction
+nlpcloud.grammar-endpoint=/gs-correction
 
 # ===== Keyword extraction =====
 nlpcloud.keyword-model=llama-3-1-405b
-nlpcloud.keyword-endpoint=/kw_kp_extraction
+nlpcloud.keyword-endpoint=/kw-kp-extraction
 
 # ===== Entity extraction (NER) =====
 nlpcloud.entity-model=en_core_web_lg
 nlpcloud.entity-endpoint=/entities
+
+logging.level.org.springframework.web.client.RestTemplate=DEBUG
+logging.level.org.springframework.http.client=DEBUG
+logging.level.org.apache.http=DEBUG
