Changes done to support prod and dev

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,13 @@ nlpcloud.summarization-model=${NLP_CLOUD_SUMMARIZATION_MODEL:bart-large-cnn}
 nlpcloud.summarization-endpoint=/summarization
 nlpcloud.timeout=${NLP_CLOUD_TIMEOUT:5s}
 nlpcloud.max-retries=${NLP_CLOUD_MAX_RETRIES:3}
+server.port=${PORT:8080}
+server.forward-headers-strategy=native
+spring.main.lazy-initialization=true
+spring.jpa.open-in-view=false
+spring.datasource.hikari.initializationFailTimeout=0
+spring.jpa.defer-datasource-initialization=true
+server.shutdown=graceful
+spring.lifecycle.timeout-per-shutdown-phase=20s
+
+
